login y registro en proceso

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,21 +1,37 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>Login</ion-title>
-  </ion-navbar>
-</ion-header>
-
-<ion-content padding>
-	<form [formGroup]="form" (ngSubmit)="loginForm()">
-		<ion-list>
-		  <ion-item>
-			<ion-input type="text" formControlName="email" placeholder="E-mail" required></ion-input>
-		  </ion-item>
-		</ion-list>
-		<ion-list>
-		  <ion-item>
-			<ion-input type="password" formControlName="password" placeholder="Password" required></ion-input>
-		  </ion-item>
-		</ion-list>
-		<button ion-button type="submit" color="primary" [disabled]="!form.valid" block>Login</button>
-    </form>
+<ion-content class="login-content" padding>
+	<div text-center>
+		<img src="http://placehold.it/300x200"/>
+	</div>
+	<div class="login-box">
+		<form [formGroup]="form" (ngSubmit)="loginForm()">
+			<ion-row>
+				<ion-col>
+					<ion-list inset>
+						<ion-item>
+							<ion-input type="text" formControlName="email" placeholder="E-mail" required></ion-input>
+						</ion-item>
+						<ion-item>
+							<ion-input type="{{type}}" formControlName="password" placeholder="Password" required></ion-input>
+							<button *ngIf="!showPass" ion-button clear type="button" item-right (click)="showPassword()"> 
+								<ion-icon name="ios-eye-off-outline"></ion-icon>
+							</button>
+							<button *ngIf="showPass" ion-button clear type="button" item-right (click)="showPassword()">
+								<ion-icon name="ios-eye-outline"></ion-icon>
+							</button>
+						</ion-item>
+					</ion-list>
+				</ion-col>
+			</ion-row>
+			<ion-row>
+				<ion-col class="signup-col">
+					<button ion-button type="submit" color="primary" [disabled]="!form.valid" full>Iniciar sesión</button>
+				</ion-col>
+			</ion-row>
+		</form>
+		<ion-row>
+			<ion-col class="signup-col">
+				<button ion-button class="register-btn" (click)="crearCuenta()" clear>Crear nueva cuenta</button>
+			</ion-col>
+		</ion-row>
+	</div>
 </ion-content>
