--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,8 @@
 
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
+  <!--script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8_qD8yACMYZQRgv_OE0OiRPMj7BQqX2c"></script-->
+  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyB8_qD8yACMYZQRgv_OE0OiRPMj7BQqX2c"></script>
 
   <!-- The vendor js is generated during the build process
        It contains all of the dependencies in node_modules -->
