--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,5 +10,6 @@
 
 <ion-content padding>
 	<h3>Bienvenido!</h3>
+	<div id="map"></div>
 	<button ion-button color="primary" (click)="showConfirmAlert()" round>Alert</button>
 </ion-content>
