--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -28,6 +28,22 @@
 				</ion-col>
 			</ion-row>
 		</form>
+		 <ion-list>
+			 <ion-item>
+			 <ion-label floating>Username</ion-label>
+			 <ion-input type="text" name="username" [(ngModel)]="data.username"></ion-input>
+			 </ion-item>
+			 <button ion-button block (click)="submit()">Submit to server</button>
+		</ion-list>
+		<ion-card>
+			 <ion-card-header>
+			 Response
+			 </ion-card-header>
+			 
+			 <ion-card-content>
+			 <b>{{data.response}}</b>
+			 </ion-card-content>
+		</ion-card>
 		<ion-row>
 			<ion-col class="signup-col">
 				<button ion-button class="register-btn" (click)="crearCuenta()" clear>Crear nueva cuenta</button>
