--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -8,10 +8,10 @@
 				<ion-col>
 					<ion-list inset>
 						<ion-item>
-							<ion-input type="text" formControlName="email" placeholder="E-mail" required></ion-input>
+							<ion-input type="text" formControlName="email" value="aaa@aaa.com" placeholder="E-mail" required></ion-input>
 						</ion-item>
 						<ion-item>
-							<ion-input type="{{type}}" formControlName="password" placeholder="Password" required></ion-input>
+							<ion-input type="{{type}}" value="mab123" formControlName="password" placeholder="Password" required></ion-input>
 							<button *ngIf="!showPass" ion-button clear type="button" item-right (click)="showPassword()"> 
 								<ion-icon name="ios-eye-off-outline"></ion-icon>
 							</button>
@@ -28,22 +28,11 @@
 				</ion-col>
 			</ion-row>
 		</form>
-		 <ion-list>
-			 <ion-item>
-			 <ion-label floating>Username</ion-label>
-			 <ion-input type="text" name="username" [(ngModel)]="data.username"></ion-input>
-			 </ion-item>
-			 <button ion-button block (click)="submit()">Submit to server</button>
-		</ion-list>
-		<ion-card>
-			 <ion-card-header>
-			 Response
-			 </ion-card-header>
-			 
+		<!--ion-card>
 			 <ion-card-content>
-			 <b>{{data.response}}</b>
+				<b>{{data.response}}</b>
 			 </ion-card-content>
-		</ion-card>
+		</ion-card-->
 		<ion-row>
 			<ion-col class="signup-col">
 				<button ion-button class="register-btn" (click)="crearCuenta()" clear>Crear nueva cuenta</button>
