--- a/src/pages/detalle_viaje/detalle_viaje.html
+++ b/src/pages/detalle_viaje/detalle_viaje.html
@@ -9,10 +9,7 @@
 
 <ion-content>
   <h3 text-center *ngIf="selectedItem">
-    {{selectedItem.title}}
+    Viaje {{selectedItem.id}}
     <ion-icon [name]="selectedItem.icon"></ion-icon>
   </h3>
-  <h4 text-center *ngIf="selectedItem">
-    You navigated here from <b>{{selectedItem.title}}</b>
-  </h4>
 </ion-content>
