listo listado, querys de login y viajes, ver como guardar posicion actual

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,7 +14,7 @@
 		{{ item.origen }}
 	  </ion-item>
 	</ion-list>
-	<ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+	<ion-infinite-scroll *ngIf="contador < viajes.length" (ionInfinite)="doInfinite($event)">
 		<ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Cargando más viajes..."></ion-infinite-scroll-content>
 	</ion-infinite-scroll>
 </ion-content>
