--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,23 +3,27 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+	<ion-searchbar (ionInput)="buscarItems($event)" placeholder="Buscar" ></ion-searchbar>
+    <!--ion-title>Home</ion-title-->
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-	<ion-searchbar (ionInput)="buscarItems($event)" placeholder="Buscar" ></ion-searchbar>
+	<h2 text-center>Listado de viajes</h2>
 	<ion-list>
-		<ion-item *ngFor="let item of items; let i=index" text-wrap (click)="verSubmenu(i)" [ngClass]="{active: isGroupShown(i)}">
-		{{ item.origen }}
-			<ion-item-group submenu *ngIf="isGroupShown(i)">
-				<ion-item submenu-item>ID: <b>{{ item.id }}</b></ion-item>
+		<ion-item *ngFor="let item of items; let i=index" (click)="verSubmenu(i)" [ngClass]="{active: isGroupShown(i)}">
+			<ion-icon *ngIf="item.status == 1 && item.en_proceso == 0 && item.distancia_total_recorrida == 0" ios="ios-checkmark-circle" md="md-checkmark-circle"><label> - </label></ion-icon>
+			<ion-icon *ngIf="item.status == 1 && item.en_proceso == 1 && item.distancia_total_recorrida == 0" ios="ios-car" md="md-car"><label> - </label></ion-icon>
+			<!--ion-icon *ngIf="item.status == 1 && item.en_proceso == 1 && item.distancia_total_recorrida > 0" ios="ios-home" md="md-home"></ion-icon>
+			<ion-icon *ngIf="item.status == 1 && item.en_proceso == 1 && item.distancia_total_recorrida > 0" ios="ios-close-circle" md="md-close-circle"></ion-icon-->
+			{{ item.origen }}
+			<ion-item-group submenu text-wrap *ngIf="isGroupShown(i)">
+				<ion-item >ID: <b>{{ item.id }}</b></ion-item>
+				<ion-item submenu-item>Fecha: <b>{{ item.fecha }} {{ item.hora }}</b></ion-item>
 				<ion-item submenu-item>Pedido por: <b>{{ item.responsable.nombre }}</b></ion-item>
 				<ion-item submenu-item>Empresa: <b>{{ item.empresa.nombre }}</b></ion-item>
-				<ion-item submenu-item>Proveedor: <b>{{ item.proveedor }}</b></ion-item>
-				<ion-item submenu-item>Fecha: <b>{{ item.fecha }}</b></ion-item>
-				<ion-item submenu-item>Hora: <b>{{ item.hora }}</b></ion-item>
-				<ion-item submenu-item>Origen: <b>{{ item.origen }}</b></ion-item>
+				<!--ion-item submenu-item>Proveedor: <b>{{ item.proveedor }}</b></ion-item-->
+				<!--ion-item submenu-item>Origen: <b>{{ item.origen }}</b></ion-item-->
 				<ion-item submenu-item>Destino: <b>{{ item.destino }}</b></ion-item>
 				<ion-item submenu-item>Pasajero 1: <b>{{ item.pasajero1.trim() }}</b></ion-item>
 				<ion-item submenu-item>Centro de costo 1: <b>{{ item.cc1.descripcion }}</b></ion-item>
