--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,7 +24,7 @@
 				<ion-item submenu-item>Fecha: <b>{{ item.fecha }} {{ item.hora }}</b></ion-item>
 				<ion-item submenu-item>Pedido por: <b>{{ item.responsable.nombre }}</b></ion-item>
 				<ion-item submenu-item>Empresa: <b>{{ item.empresa.nombre }}</b></ion-item>
-				<!--ion-item submenu-item>Proveedor: <b>{{ item.proveedor }}</b></ion-item-->
+				<!--ion-item submenu-item>Proveedor: <b>{{ item.proveedor.nombre }}</b></ion-item-->
 				<!--ion-item submenu-item>Origen: <b>{{ item.origen }}</b></ion-item-->
 				<ion-item submenu-item>Destino: <b>{{ item.destino }}</b></ion-item>
 				<ion-item submenu-item>Pasajero 1: <b>{{ item.pasajero1.trim() }}</b></ion-item>
