--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,9 +15,9 @@
 	</ion-refresher>
 	<ion-list>
 		<ion-item *ngFor="let item of items; let i=index" (click)="verSubmenu(i)" [ngClass]="{active: isGroupShown(i)}">
-			<ion-icon *ngIf="item.status == 1 && item.en_proceso == 0 && item.distancia_total_recorrida == 0" ios="ios-checkmark-circle" md="md-checkmark-circle"><label> - </label></ion-icon>
-			<ion-icon *ngIf="item.status == 1 && item.en_proceso == 1 && item.distancia_total_recorrida == 0" ios="ios-car" md="md-car"><label> - </label></ion-icon>
-			<ion-icon *ngIf="item.status == 1 && item.en_proceso == 1 && item.distancia_total_recorrida > 0" ios="ios-unlock" md="md-unlock"><label> - </label></ion-icon>
+			<ion-icon *ngIf="item.status == 1 && item.en_proceso == 0 && item.distancia_total_recorrida == 0" name="checkmark-circle"><label> - </label></ion-icon>
+			<ion-icon *ngIf="item.status == 1 && item.en_proceso == 1 && item.distancia_total_recorrida == 0" name="car"><label> - </label></ion-icon>
+			<ion-icon *ngIf="item.status == 1 && item.en_proceso == 1 && item.distancia_total_recorrida > 0" name="unlock"><label> - </label></ion-icon>
 			{{ item.origen }}
 			<ion-item-group submenu text-wrap *ngIf="isGroupShown(i)">
 				<ion-item >ID: <b>{{ item.id }}</b></ion-item>
