--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,6 +15,7 @@
 	</ion-refresher>
 	<ion-list>
 		<ion-item *ngFor="let item of items; let i=index" (click)="verSubmenu(i)" [ngClass]="{active: isGroupShown(i)}">
+			<ion-icon *ngIf="item.status != 1" name="pin"></ion-icon>
 			<ion-icon *ngIf="item.status == 1 && item.en_proceso == 0 && item.distancia_total_recorrida == 0" name="checkmark-circle"></ion-icon> 
 			<ion-icon *ngIf="item.status == 1 && item.en_proceso == 1 && item.distancia_total_recorrida == 0" name="car"></ion-icon> 
 			<ion-icon *ngIf="item.status == 1 && item.en_proceso == 1 && item.distancia_total_recorrida > 0" name="unlock"></ion-icon> 
@@ -38,8 +39,8 @@
 				<ion-item submenu-item>Observaciones: <b>{{ item.observaciones }}</b></ion-item>
 				<ion-item submenu-item>
 					<ion-buttons end>
-						<button ion-button *ngIf="item.fechaValida && item.status == 1 && item.en_proceso == 1 && item.distancia_total_recorrida > 0" color="danger" (click)="cerrarViaje($event, item)">Cerrar Viaje</button>
-						<button ion-button (click)="verRecorrido($event, item)">Ver recorrido</button>
+						<button ion-button *ngIf="item.fechaValida && item.status == 1 && item.en_proceso == 1 && item.distancia_total_recorrida > 0" color="danger" (click)="cerrarViaje($event, item)" clear>Cerrar</button>
+						<button ion-button (click)="verRecorrido($event, item)" clear>Ver</button>
 					</ion-buttons>
 				</ion-item>
 			</ion-item-group>
