--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,12 +1,14 @@
 <ion-content class="login-content" padding>
 	<div text-center>
-		<img src="http://placehold.it/300x200"/>
+		<img src="http://mabmobile.com.ar/remis/images/logo_mab_2.png" width="300px"/>
 	</div>
 	<div class="login-box">
-		<form [formGroup]="form" (ngSubmit)="loginForm()">
-			<ion-row>
-				<ion-col>
-					<ion-list inset>
+		<div class="login-panel panel panel-default">
+		  <div class="panel-heading">Iniciar sesión</div>
+		  <div class="panel-body">
+			<form [formGroup]="form" (ngSubmit)="loginForm()">
+				<ion-row>
+					<ion-col>
 						<ion-item>
 							<ion-input type="text" formControlName="email" value="jpromerom@hotmail.com" placeholder="E-mail" required></ion-input>
 						</ion-item>
@@ -19,14 +21,15 @@
 								<ion-icon name="ios-eye-outline"></ion-icon>
 							</button>
 						</ion-item>
-					</ion-list>
-				</ion-col>
-			</ion-row>
-			<ion-row>
-				<ion-col class="signup-col">
-					<button ion-button type="submit" color="primary" [disabled]="!form.valid" full>Iniciar sesión</button>
-				</ion-col>
-			</ion-row>
-		</form>
+					</ion-col>
+				</ion-row>
+				<ion-row>
+					<ion-col class="signup-col">
+						<button ion-button type="submit" color="primary" [disabled]="!form.valid" full>Iniciar sesión</button>
+					</ion-col>
+				</ion-row>
+			</form>
+		  </div>
+		</div>
 	</div>
 </ion-content>
