--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -29,6 +29,11 @@
 					</ion-col>
 				</ion-row>
 			</form>
+			<ion-row text-center>
+				<ion-col class="signup-col">
+					<button ion-button (click)="olvidoPassword()" clear>Olvidó su contraseña?</button>
+				</ion-col>
+			</ion-row>
 		  </div>
 		</div>
 	</div>
