--- a/src/pages/viaje/viaje.html
+++ b/src/pages/viaje/viaje.html
@@ -5,8 +5,8 @@
     </button>
 	<ion-title>Viaje {{viajeActual.id}}</ion-title>
 	<ion-buttons end>
-		<button *ngIf="viajeActual.distancia_total_recorrida == 0 && viajeActual.en_proceso == 0 && !isTracking && viajeActual.status == 1" ion-button color="secondary" (click)="comenzarViaje()">Comenzar</button>
-		<button *ngIf="viajeActual.distancia_total_recorrida == 0 && viajeActual.en_proceso == 1 && isTracking && viajeActual.status == 1" ion-button color="danger" (click)="finalizarViaje()">Finalizar</button>
+		<button *ngIf="viajeActual.distancia_total_recorrida == 0 && viajeActual.en_proceso == 0 && viajeActual.status == 1" ion-button color="secondary" (click)="comenzarViaje()">Comenzar</button>
+		<button *ngIf="viajeActual.distancia_total_recorrida == 0 && viajeActual.en_proceso == 1 && viajeActual.status == 1" ion-button color="danger" (click)="finalizarViaje()">Finalizar</button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
