--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,10 +14,10 @@
 		<ion-refresher-content pullingIcon="arrow-dropdown" pullingText="Arrastrar para actualizar" refreshingSpinner="circles" refreshingText="Actualizando..."></ion-refresher-content>
 	</ion-refresher>
 	<ion-list>
-		<ion-item *ngFor="let item of items; let i=index" (click)="verSubmenu(i)" [ngClass]="{active: isGroupShown(i)}">
+		<ion-item *ngFor="let item of viajesProvider.items; let i=index" (click)="verSubmenu(i)" [ngClass]="{active: isGroupShown(i)}">
 			<ion-icon *ngIf="item.status != 1" name="pin"></ion-icon>
 			<ion-icon *ngIf="item.status == 1 && item.en_proceso == 0 && item.distancia_total_recorrida == 0" name="checkmark-circle"></ion-icon> 
-			<ion-icon *ngIf="item.status == 1 && item.en_proceso == 1 && item.distancia_total_recorrida == 0" name="car"></ion-icon> 
+			<ion-icon *ngIf="locationTracker.isTracking[item.id] || (item.status == 1 && item.en_proceso == 1 && item.distancia_total_recorrida == 0)" name="car"></ion-icon> 
 			<ion-icon *ngIf="item.status == 1 && item.en_proceso == 1 && item.distancia_total_recorrida > 0" name="unlock"></ion-icon> 
 			({{ item.id }}) {{ item.origen }}
 			<ion-item-group submenu text-wrap *ngIf="isGroupShown(i)">
@@ -48,7 +48,7 @@
 			</ion-item-group>
 	  </ion-item>
 	</ion-list>
-	<ion-infinite-scroll *ngIf="contador < viajesAux.length" (ionInfinite)="doInfinite($event)">
+	<ion-infinite-scroll *ngIf="viajesProvider.contador < viajesProvider.viajesAux.length" (ionInfinite)="doInfinite($event)">
 		<ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Cargando más viajes..."></ion-infinite-scroll-content>
 	</ion-infinite-scroll>
 </ion-content>
