--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -31,7 +31,7 @@
 			</form>
 			<ion-row text-center>
 				<ion-col class="signup-col">
-					<button ion-button (click)="olvidoPassword()" clear>Olvidó su contraseña?</button>
+					<button ion-button (click)="forgotPassword()" clear>Olvidó su contraseña?</button>
 				</ion-col>
 			</ion-row>
 		  </div>
