--- a/src/pages/password/password.html
+++ b/src/pages/password/password.html
@@ -24,7 +24,7 @@
 		</div>
 		<ion-row text-center>
 			<ion-col>
-				<button ion-button (click)="volver()" clear>Volver</button>
+				<button ion-button (click)="goBack()" clear>Volver</button>
 			</ion-col>
 		</ion-row>
 	</div>
